# snip

./: .gitignore  .snips  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
completions/: snip.bash  snip.fish  snip.nushell  snip.zsh
docs/: RESEARCH.md
docs/rnd/: 00-MASTER-PLAN.md  01-just-analysis.md  02-pet-analysis.md  03-tldr-analysis.md  04-fzf-analysis.md  05-atuin-analysis.md  06-fuzzy-picker-design.md  07-shell-integration-design.md  08-plugin-system-design.md  09-ai-features-design.md  10-community-registry-design.md  11-team-collaboration-design.md  12-performance-design.md  13-cross-platform-design.md  14-onboarding-ux-design.md  15-ci-release-design.md  16-implementation-status.md  17-architecture-v2.md
src/: lib.rs  main.rs
src/cli/: add.rs  completions.rs  doctor.rs  edit.rs  explain.rs  hook.rs  import.rs  init.rs  list.rs  mod.rs  rm.rs  run.rs  setup.rs  stale.rs  suggest.rs
src/core/: detector.rs  executor.rs  explainer.rs  fuzzy.rs  history.rs  mod.rs  snipfile.rs  snippet.rs  stale.rs  validator.rs
src/detect/: cargo.rs  docker.rs  makefile.rs  mod.rs  node.rs  python.rs
src/ui/: mod.rs  picker.rs  prompt.rs  render.rs
src/utils/: fs.rs  git.rs  mod.rs  shell.rs
tests/: core_test.rs
