[package]
name = "snip"
version = "0.2.0"
edition = "2021"
description = "Project-scoped command snippets with built-in fuzzy finder"
license = "MIT"
repository = "https://github.com/Bilal140202/snip"
keywords = ["cli", "snippets", "commands", "fuzzy", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
crossterm = { version = "0.28", optional = true }
fuzzy-matcher = "0.3"
shell-words = "1"
colored = "3"
anyhow = "1"
which = "6"

[features]
default = ["detect-docker", "picker"]
detect-docker = ["serde_yaml"]
picker = ["crossterm"]

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1

rust-version = "1.75"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"